--- a/station/index.html
+++ b/station/index.html
@@ -1235,7 +1235,7 @@
 
 			<div class="checkbox">
 				<label>
-					<input type="checkbox" ng-model="d.value.unsalaried:"> <span ng-if="d.value.unsalaried"><b>Ja</b>/Nein</span><span ng-if="!d.value.unsalaried">Ja/<b>Nein</b></span>
+					<input type="checkbox" ng-model="d.value.unsalaried"> <span ng-if="d.value.unsalaried"><b>Ja</b>/Nein</span><span ng-if="!d.value.unsalaried">Ja/<b>Nein</b></span>
 				</label>
 			</div>
 		</div>
